--- a/Twitter.ipynb
+++ b/Twitter.ipynb
@@ -775,7 +775,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fd3f1d20",
+   "id": "41630d37",
    "metadata": {},
    "source": [
     "To ensure accurate sentiment analysis, the text must be cleaned by removing meaningless words such as URLs, stop words ('what', 'who', 'this'...), punctuation, and numbers. Functions will be created to perform this cleaning process and the cleaned words will be moved to a new column."
@@ -1570,7 +1570,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "ef884dbf",
+   "id": "6efe8d95",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3425,7 +3425,7 @@
   {
    "cell_type": "code",
    "execution_count": 70,
-   "id": "e7ecf22a",
+   "id": "eeb5cf9c",
    "metadata": {
     "hideCode": true
    },
@@ -3998,6 +3998,7 @@
   }
  ],
  "metadata": {
+  "celltoolbar": "Hide code",
   "kernelspec": {
    "display_name": "Python 3",
    "language": "python",
